language_icon: Added position relative and z-index to language switcher to make it lay on top of notice on smaller screens (which prevented clicking on some languages). waiting_for: Added cursor pointer to gotomap_cont span, to make it clearer that the link is clickable.

--- a/src/styles/language_icon.less
+++ b/src/styles/language_icon.less
@@ -1,5 +1,7 @@
 .language-switcher {
   text-align: center;
+  position: relative;
+  z-index: 1;
 }
 
 .language-icon {
