--- a/src/styles/waiting_for.less
+++ b/src/styles/waiting_for.less
@@ -14,6 +14,7 @@
 .gotomap_cont {
     span {
         color: #ddd;
+        cursor: pointer;
         text-decoration: underline;
         text-decoration-color: #555;
     }
